appId: ${MAESTRO_APP_ID}
---
- stopApp
- waitForAnimationToEnd
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: Products
    timeout: 60000
- tapOn:
    id: .*:id/productIV
    index: 0
- assertVisible:
    id: .*:id/productTV
    text: Sauce Labs Backpack
- scrollUntilVisible:
    element:
      id: .*:id/cartBt
    direction: DOWN
- assertVisible:
    id: .*:id/cartBt
- tapOn:
    id: .*:id/cartBt
- tapOn: View cart
- assertVisible: My Cart
- assertVisible: Sauce Labs Backpack
